@@ -101,7 +101,7 @@ let label_of_mbid (_,s,_) = s
 
 
 let mk_label l = l
-let string_of_label l = l
+let string_of_label = string_of_id
 
 let id_of_label l = l
 let label_of_id id = id
